fix: card overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,8 @@ body {
   height: 600px;
   background-color: rgb(11, 97, 97);
   border-radius: 20px;
+  overflow-y: auto;
+  padding: 10px;
 }
 
 .cat-card {
